update: code format and UI